package com.y4vra.irboardbackend.domain.model;

import com.y4vra.irboardbackend.domain.errors.DeactivatedEntityException;
import com.y4vra.irboardbackend.domain.model.enums.EntityState;
import com.y4vra.irboardbackend.domain.model.enums.RequirementState;
import com.y4vra.irboardbackend.domain.model.interfaces.ProjectElement;
import jakarta.persistence.*;

import java.util.HashSet;
import java.util.Set;

@Entity
@Inheritance(strategy = InheritanceType.SINGLE_TABLE)
@DiscriminatorColumn(name = "requirement_type")
public abstract class Requirement extends ProjectElement {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    private Long orderValue;
    private String name;
    private String description;

    @Enumerated(EnumType.STRING)
    private RequirementState state;

    private Boolean isPendingReview;

    @OneToMany(mappedBy = "parent", cascade = CascadeType.ALL)
    private Set<Requirement> children = new HashSet<>();

    @ManyToOne
    @JoinColumn(name = "parent_id")
    private Requirement parent;

    @ManyToMany(mappedBy = "observerRequirements")
    private Set<Document> observedDocuments = new HashSet<>();
    @ManyToMany(mappedBy = "observerRequirements")
    private Set<Stakeholder> observedStakeholders = new HashSet<>();

    @ManyToMany()
    @JoinTable(
            name = "requirement_observing",
            joinColumns = @JoinColumn(name = "observer_id"),
            inverseJoinColumns = @JoinColumn(name = "observed_id")
    )
    private Set<Requirement> observerRequirements = new HashSet<>();
    @ManyToMany(mappedBy = "observerRequirements")
    private Set<Requirement> observedRequirements = new HashSet<>();

    public void update(){
        if(!state.equals(RequirementState.PENDING_APPROVAL) && !state.equals(RequirementState.DEACTIVATED)&& !state.equals(RequirementState.REMOVED)){
            setState(RequirementState.PENDING_APPROVAL);
        }
    }
    public void notifyObservers() {
        observerRequirements.forEach(Requirement::update);
    }
    public void checkCanBeModified() {
        if (state.equals(RequirementState.DEACTIVATED)){
            throw new DeactivatedEntityException("The requirement is deactivated and cannot be modified");
        } else if (state.equals(RequirementState.REMOVED)){
            throw new DeactivatedEntityException("The requirement is removed and cannot be modified");
        }
    }

    public Long getId() { return id; }
    public void setId(Long id) { this.id = id; }

    public Long getOrderValue() { return orderValue; }
    public void setOrderValue(Long orderValue) { this.orderValue = orderValue; }

    public String getName() { return name; }
    public void setName(String name) { this.name = name; }

    public String getDescription() { return description; }
    public void setDescription(String description) { this.description = description; }

    public RequirementState getState() { return state; }
    public void setState(RequirementState state) { this.state = state; }

    public Boolean getIsPendingReview() { return isPendingReview; }
    public void setIsPendingReview(Boolean isPendingReview) { this.isPendingReview = isPendingReview; }

    public Set<Requirement> getChildren() { return new HashSet<>(children); }

    /** Use for JPA/internal mutation only */
    protected Set<Requirement> _getChildren() { return children; }

    public Requirement getParent() { return parent; }
    public void setParent(Requirement parent) { this.parent = parent; }

    public Set<Document> getObservedDocuments() { return Set.copyOf(observedDocuments); }
    protected Set<Document> _getObservedDocuments() { return observedDocuments; }
    public Set<Stakeholder> getObservedStakeholders() { return Set.copyOf(observedStakeholders); }
    protected Set<Stakeholder> _getObservedStakeholders() { return observedStakeholders; }
    public Set<Requirement> getObserverRequirements() { return Set.copyOf(observerRequirements); }
    protected Set<Requirement> _getObserverRequirements() { return observerRequirements; }
    public Set<Requirement> getObservedRequirements() { return Set.copyOf(observedRequirements); }
    protected Set<Requirement> _getObservedRequirements() { return observedRequirements; }

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (!(o instanceof Requirement other)) return false;
        return id != null && id.equals(other.id);
    }

    @Override
    public int hashCode() {
        return id != null ? id.hashCode() : System.identityHashCode(this);
    }

    public String toDebugString() {
        StringBuilder sb = new StringBuilder();
        sb.append("FunctionalRequirement [parentFunctionality=");
        sb.append(getParent()==null?"null":getParent().toDebugString());
        sb.append("]");
        return sb.toString();
    }
}