export type EntityState =
    "PENDING_APPROVAL"|
    "APPROVED"|
    "DEACTIVATED"|
    "REMOVED";