export type RequirementState = 
  "PENDING_APPROVAL"|
  "APPROVED"|
  "FINISHED"|
  "DEACTIVATED"|
  "REMOVED";
