@startuml backendClassDiagram
title Backend Class Diagram

enum PriorityStyle {
    TERNARY
    MOSCOW
}

enum ProjectState {
    ACTIVE
    FINISHED
    DEACTIVATED
    REMOVED
}

enum FunctionalityState {
    ACTIVE
    DEACTIVATED
    REMOVED
}
enum EntityState {
    PENDING_APPROVAL
    APPROVED
    DEACTIVATED
    REMOVED
}

enum RequirementState {
    PENDING_APPROVAL
    FINISHED
    APPROVED
    DEACTIVATED
    REMOVED
}

enum ComparisonOperator {
    EQUAL_TO
    LESS_THAN
    GREATER_THAN
}

class Project {
    - long id
    - String name
    - String description
    - PriorityStyle priorityStyle
    - ProjectState state
    - LocalDateTime createdAt
}

class Functionality {
    - long id
    - String name
    - String label
    - FunctionalityState state
}

abstract class Requirement {
    - long id
    - String slug
    - Float orderValue
    - String name
    - String description
    - RequirementState state
    - Boolean isPendingReview
}

class FunctionalRequirement {
    - String priority
    - String stability
}

class NonFunctionalRequirement {
    - String measurementUnit
    - ComparisonOperator operator
    - Double thresholdValue
    - Double targetValue
    - Double actualValue
}

class Stakeholder {
    - long id
    - String name
    - String description
    - EntityState state
}

class Document {
    - long id
    - String fileName
    - String mimeType
    - byte[] content
    - EntityState state
}

class User {
    - long id
    - String email
    - String name
    - String surname
    - Boolean active
}

class EntityLock {
    - long id
    - String entityType
    - long entityId
    - LocalDateTime lockedAt
    - Long projectId
    - boolean systemWide
}


Project "1" .. "1" ProjectState
Functionality "1" .. "1" FunctionalityState
Requirement "1" .. "1" RequirementState
Stakeholder "1" .. "1" EntityState
Document "1" .. "1" EntityState
Requirement "1" .. "1" PriorityStyle
NonFunctionalRequirement "1" .. "1" ComparisonOperator

Project "1" *-down-- "0..*" Functionality
Project "1" *--- "0..*" NonFunctionalRequirement
Project "1" *--- "0..*" Document
Project "1" *--- "0..*" Stakeholder

Functionality "1" *-- "0..*" FunctionalRequirement

Requirement <|- FunctionalRequirement
Requirement <|- NonFunctionalRequirement

Requirement "0..*" -- "0..*" Stakeholder : linked
Requirement "1" o-- "0..*" Requirement : (Parent/Child)
Requirement "0..*" -- "0..*" Requirement : crossed trazability
Requirement "0..*" -- "0..*" Document : linked


User "1" -- "0..*" EntityLock : owns

@enduml